# claude-code-instruction-system

./: .gitattributes  .gitignore  BEST-PRACTICES.md  CHANGELOG.md  CLAUDE-LEAN.md  CLAUDE.md  CLAUDE.md.backup-full  CONTRIBUTING.md  EVOLUTION-REPORT-003.md  HOOKS-FORMAT-FIX.md  IMPLEMENTATION-SUMMARY-2.md  KNOWLEDGE-GRAPH-IMPLEMENTATION.md  OPTIMIZATION-COMPLETION-REPORT.md  PRECOMPACT-HOOK-COMPLETE.md  QA-IMPLEMENTATION-REPORT.md  QA-SYSTEM.md  QUALITY-REPORT.md  QUICK-REFERENCE.md  README.md  RELEASE-NOTES.md  SCRIPTS-CREATION-REPORT.md  TAIYI-3.1-RELEASE-NOTES.md  TAIYI-3.1-UPGRADE-REPORT.md
.claude/: PRD.md  settings.json  settings.json.example  settings.local.json
.god/: README.md  config.json  directives.json
agents/: INDEX.md  architect.md  auto-optimizer.md  autopilot-orchestrator.md  code-reviewer.md  codemap-builder.md  context-archivist.md  data-scientist.md  debugger.md  orchestrator.md  performance-monitor.md  qa-fixer.md  qa-reviewer.md  requirements-analyst.md  router.md  sdd-riper-orchestrator.md  security-analyst.md  senior-code-architect.md  spec-writer.md  strategy-selector.md  tech-mentor.md  vitest-tester.md
analysis/: COMPREHENSIVE-ANALYSIS.md  Claude-Code-Auto-Update-Analysis.md  Claude-Code-Multi-Agent-Analysis.md  auto-claude-deep-analysis.md
commands/: INDEX.md
config/: keywords.json  mcp-servers.json  port-ranges.json  port-registry.json  settings.json
docs/: AGENT-FRAMEWORK-DECISION.md  API-KEYS-SETUP.md  BEST-PRACTICES.md  CLAUDE-VERSION-MANAGEMENT.md  CLI-SETUP-SUMMARY.md  CONFIG-FILES-GUIDE.md  CONTEXT-ENGINEERING-GUIDE.md  FEATURES.md  HUD-PERFORMANCE-COMPARISON.md  HUD-QUICK-START.md  HUD-STATUSLINE-GUIDE.md  KNOWLEDGE-ARCHITECTURE.md  KNOWLEDGE-COMPOUNDING-GUIDE.md  MEMORY-SYSTEM.md  ORCHESTRATION-GUIDE.md  PORT-INTEGRATION.md  PORT-MANAGEMENT-GUIDE.md  QA-QUICKSTART.md  QA-SYSTEM.md  QUICK-REFERENCE-CONFIG-VALIDATION.md  QUICK-START.md  SDD-RIPER-GUIDE.md  SECURITY.md  SKILLS-CATALOG.md  STATUSLINE-RESEARCH-REPORT.md  THIRD-PARTY-API-INVESTIGATION-SUMMARY.md  TOOLS-ECOSYSTEM-GUIDE.md  coding-standards.md  context-archival-README.md  context-archival-guide.md  context-archival-implementation.md  context-archival-quickstart.md  mcp-configuration-guide.md  phase3-implementation-report.md  research-support-architecture.md  research-support-guide.md  research-support-requirements.md  statusline-json-formats.md  taiyi-philosophy.md
examples/: orchestration-examples.md  (+3 more)
tools/git-info-rust/: Cargo.toml  README.md
tools/git-info-rust/src/: main.rs
tools/hud-render-rust/: Cargo.toml  README.md
tools/hud-render-rust/src/: main.rs
tools/tui-config/: Cargo.toml  README.md
tools/tui-config/src/: config.rs  main.rs  preview.rs  state.rs
tools/tui-config/src/ui/: mod.rs
(+330 files in other folders)
