[package]
name = "taiyi-git-info"
version = "0.1.0"
edition = "2021"
authors = ["Taiyi System"]
description = "High-performance Git information collector for Taiyi Meta-System"
license = "MIT"
keywords = ["git", "info", "performance", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Git library
git2 = "0.19"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal colors
crossterm = "0.28"

# Performance
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "git-info"
path = "src/main.rs"
