[package]
name = "taiyi-tui-config"
version = "0.1.0"
edition = "2021"
authors = ["Taiyi System"]
description = "Interactive TUI configuration tool for Taiyi Meta-System"
license = "MIT"
repository = "https://github.com/taiyi-system/claude-code-instruction-system"
keywords = ["tui", "configuration", "claude", "ai"]
categories = ["command-line-interface", "config"]

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File System
dirs = "5.0"
notify = "6.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# CLI Arguments
clap = { version = "4.5", features = ["derive"] }

# Syntax Highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "taiyi-config"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
